add code header

--- a/pca.ipynb
+++ b/pca.ipynb
@@ -333,6 +333,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### In Code"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
