make small improvements

--- a/pca.ipynb
+++ b/pca.ipynb
@@ -8,13 +8,13 @@
     "\n",
     "Think of the predictors in your dataset as dimensions in what we can usefully call \"feature space\". If we're predicting house prices, then we might have a 'square feet' dimension or a 'number of bathrooms' dimension, etc. Then each record (of a house or a house sale, say) would be represented as a point (or vector) in this feature space. Some would score higher on the 'latitude' dimension or lower on the 'number of bedrooms' dimension, or whatever.\n",
     "\n",
-    "One difficulty is that, despite our working nomenclature, these things aren't really _dimensions_ in the truest sense, since they're not independent of each other. When we talk about the x-, y-, and z-dimensions of Euclidean 3-space, for example, one important feature is that values of x have no bearing (per se) on values of y or of z. I can move three units along the x-dimension without changing my y- or z-position.\n",
+    "One difficulty is that, despite our working nomenclature, these things aren't really *dimensions* in the truest sense, since they're not independent of each other. When we talk about the x-, y-, and z-dimensions of Euclidean 3-space, for example, one important feature is that values of x have no bearing (per se) on values of y or of z. I can move three units along the x-dimension without changing my y- or z-position.\n",
     "\n",
-    "But the analogous thing is generally not true for datasets. When I increase my position along the 'number of bedrooms' dimension--or, better, _direction_, I also tend to increase my position along, say, the 'square feet' direction as well.\n",
+    "But the analogous thing is generally not true for datasets. When I increase my position along the 'number of bedrooms' dimension (or, better, *direction*), I also tend to increase my position along, say, the 'square feet' direction as well.\n",
     "\n",
-    "This is problematic for a couple reasons: One is that my model could be in effect \"double-counting\" certain features of my signal, which can lead to overfit models. And if my goal is inference or explanation, then I'm going to have a very hard time distinguishing between the idea that the number of bedrooms is what's _really_ predictive of housing  prices and the idea that the number of square feet is what's really so predictive.\n",
+    "This is problematic for a couple reasons: One is that my model could be in effect \"double-counting\" certain features of my signal, which can lead to overfit models. And if my goal is inference or explanation, then I'm going to have a very hard time distinguishing between the idea that the number of bedrooms is what's *really* predictive of housing prices and the idea that the number of square feet is what's really so predictive.\n",
     "\n",
-    "The idea behind PCA is to transform our dataset into something more useful for building models. What we want to do is to build new dimensions (predictors) out of the dimensions we are given in such a way that:\n",
+    "The idea behind Principal Component Analysis (PCA) is to transform our dataset into something more useful for building models. What we want to do is to build new dimensions (predictors) out of the dimensions we are given in such a way that:\n",
     "\n",
     "(1) each dimension we draw captures as much of the remaining variance among our predictors as possible; and <br/>\n",
     "(2) each dimension we draw is orthogonal to the ones we've already drawn.\n",
@@ -157,11 +157,10 @@
    "outputs": [],
    "source": [
     "def clean(df):\n",
+    "    new = df.copy()\n",
     "    for col in [' cubicinches', ' weightlbs']:\n",
-    "        df[col].replace(' ', np.nan, inplace=True)\n",
-    "        df[col] = df[col].map(float)\n",
-    "        df[col].replace(np.nan, df[col].mean(), inplace=True)\n",
-    "    return df"
+    "        new[col] = new[col].replace(' ', np.nan).map(float).replace(np.nan, new[col].mean())\n",
+    "    return new"
    ]
   },
   {
@@ -171,9 +170,10 @@
    "outputs": [],
    "source": [
     "def to_float(df):\n",
+    "    new = df.copy()\n",
     "    for col in [' cylinders', ' hp', ' time-to-60', ' year']:\n",
-    "        df[col] = df[col].map(float)\n",
-    "    return df"
+    "        new[col] = new[col].map(float)\n",
+    "    return new"
    ]
   },
   {
@@ -192,7 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def scale(df):\n",
+    "def scale(df, ss):\n",
     "    return ss.transform(df)"
    ]
   },
@@ -205,7 +205,7 @@
     "test_cleaned = clean(X_test)\n",
     "test_floated = to_float(test_cleaned)\n",
     "test_dropped = drop(test_floated)\n",
-    "test_scaled = scale(test_dropped)"
+    "test_scaled = scale(test_dropped, ss)"
    ]
   },
   {
@@ -321,14 +321,14 @@
     "\n",
     "It is standard to scale eigenvectors to a magnitude of 1, and so we would write this eigenvector as\n",
     "$\\begin{bmatrix}\n",
-    "\\sqrt\\frac{1}{2} \\\\\n",
-    "\\sqrt\\frac{1}{2}\n",
+    "\\frac{\\sqrt{2}}{2} \\\\\n",
+    "\\frac{\\sqrt{2}}{2}\n",
     "\\end{bmatrix}$.\n",
     "\n",
     "If we plug in $\\lambda = 2$, we find a second eigenvector equal to\n",
     "$\\begin{bmatrix}\n",
-    "-\\sqrt\\frac{1}{2} \\\\\n",
-    "\\sqrt\\frac{1}{2}\n",
+    "-\\frac{\\sqrt{2}}{2} \\\\\n",
+    "\\frac{\\sqrt{2}}{2}\n",
     "\\end{bmatrix}$. (I'll leave this as an exercise.)"
    ]
   },
@@ -908,7 +908,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plt.scatter(cars['PC2'], cars['PC1']);"
+    "cars['PC3'] = pca.components_[2][0] * cars[' cylinders'] +\\\n",
+    "            pca.components_[2][1] * cars[' cubicinches'] +\\\n",
+    "            pca.components_[2][2] * cars[' hp'] +\\\n",
+    "            pca.components_[2][3] * cars[' weightlbs'] +\\\n",
+    "            pca.components_[2][4] * cars[' time-to-60'] +\\\n",
+    "            pca.components_[2][5] * cars[' year']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.scatter(cars['PC2'], cars['PC1']);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(cars['PC3'], cars['PC1']);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "ax.scatter(cars['PC3'], cars['PC2']);"
    ]
   },
   {
