--- a/pca.ipynb
+++ b/pca.ipynb
@@ -44,7 +44,11 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.decomposition import PCA"
+    "from sklearn.decomposition import PCA\n",
+    "from matplotlib import pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -726,11 +730,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib import pyplot as plt\n",
-    "%matplotlib inline\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "ax.plot(X_train_new[:, 0], y_train, 'r.');"
+    "X_test_new = pca.transform(test_scaled)"
    ]
   },
   {
@@ -739,8 +739,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots()\n",
-    "ax.plot(X_train_new[:, 1], y_train, 'g.');"
+    "X_transformed = np.vstack([X_train_new, X_test_new])\n",
+    "y_new = np.concatenate([y_train, y_test])"
    ]
   },
   {
@@ -749,8 +749,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots()\n",
-    "ax.plot(X_train_new[:, 2], y_train, 'k.');"
+    "f, a = plt.subplots()\n",
+    "a.plot(X_transformed[:, 0], y_new, 'r.');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, a = plt.subplots()\n",
+    "a.plot(X_transformed[:, 1], y_new, 'g.');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, a = plt.subplots()\n",
+    "a.plot(X_transformed[:, 2], y_new, 'k.');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(np.hstack([X_transformed, y_new[:, np.newaxis]]),\n",
+    "                  columns=['PC1', 'PC2', 'PC3', 'y'])\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.relplot(data=df,\n",
+    "            x='PC1',\n",
+    "            y='PC2',\n",
+    "           hue='y');"
    ]
   },
   {
