add eigendecomposition illustration

--- a/pca.ipynb
+++ b/pca.ipynb
@@ -255,6 +255,10 @@
     "\n",
     "That's why the definition of an eigenvector is as it is: $\\vec{x}$ is an eigenvector of the matrix $A$ if $A\\vec{x} = \\lambda\\vec{x}$, for some scalar $\\lambda$. That is, the vector is oriented in just such a direction that multiplying the matrix by it serves only to lengthen or shorten it.\n",
     "\n",
+    "The diagonalization looks like this:\n",
+    "\n",
+    "$A = Q\\Lambda Q^{-1}$, where $Q$ is a matrix comprising the **eigenvectors** of $A$ and $\\Lambda$ has non-zero elements only along its main diagonal (hence the \"diagonalization\" of $A$). These non-zero elements are the **eigenvalues** of $A$. We'll return to eigendecomposition in Mod 4 when we discuss the singular value decomposition, which is a related matrix factorization.\n",
+    "\n",
     "Suppose we have the matrix\n",
     "$A =\n",
     "\\begin{bmatrix}\n",
