add demonstration of eigenvectors

--- a/pca.ipynb
+++ b/pca.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -64,16 +64,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>cubicinches</th>\n",
+       "      <th>hp</th>\n",
+       "      <th>weightlbs</th>\n",
+       "      <th>time-to-60</th>\n",
+       "      <th>year</th>\n",
+       "      <th>brand</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>350</td>\n",
+       "      <td>165</td>\n",
+       "      <td>4209</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>US.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>31.9</td>\n",
+       "      <td>4</td>\n",
+       "      <td>89</td>\n",
+       "      <td>71</td>\n",
+       "      <td>1925</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>Europe.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>302</td>\n",
+       "      <td>140</td>\n",
+       "      <td>3449</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>US.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>400</td>\n",
+       "      <td>150</td>\n",
+       "      <td>3761</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>US.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>30.5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>98</td>\n",
+       "      <td>63</td>\n",
+       "      <td>2051</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1978</td>\n",
+       "      <td>US.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    mpg   cylinders  cubicinches   hp  weightlbs   time-to-60   year     brand\n",
+       "0  14.0           8          350  165       4209           12   1972       US.\n",
+       "1  31.9           4           89   71       1925           14   1980   Europe.\n",
+       "2  17.0           8          302  140       3449           11   1971       US.\n",
+       "3  15.0           8          400  150       3761           10   1971       US.\n",
+       "4  30.5           4           98   63       2051           17   1978       US."
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cars.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,9 +454,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([8., 2.]),\n",
+       " array([[ 0.70710678, -0.70710678],\n",
+       "        [ 0.70710678,  0.70710678]]))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# We can use np.linalg.eig()\n",
     "\n",
@@ -361,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,18 +491,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([8., 2.])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "v"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[8., 0.],\n",
+       "       [0., 2.]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# np.diag()\n",
     "\n",
@@ -393,13 +534,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5., 3.],\n",
+       "       [3., 5.]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Reconstruct A by multiplication\n",
     "\n",
     "q.dot(np.diag(v)).dot(q.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Illustration that the columns of q\n",
+    "# are eigenvectors of A, where\n",
+    "# multiplication by A scales them by\n",
+    "# the eigenvalues\n",
+    "\n",
+    "print(np.allclose(A.dot(q.T[0]), v[0]*q.T[0]))\n",
+    "print(np.allclose(A.dot(q.T[1]), v[1]*q.T[1]))"
    ]
   },
   {
