remove language of mod 4

--- a/principal_component_analysis.ipynb
+++ b/principal_component_analysis.ipynb
@@ -250,7 +250,7 @@
     "\n",
     "The diagonalization looks like this:\n",
     "\n",
-    "$A = Q\\Lambda Q^{-1}$, where $Q$ is a matrix comprising the **eigenvectors** of $A$ and $\\Lambda$ has non-zero elements only along its main diagonal (hence the \"diagonalization\" of $A$). These non-zero elements are the **eigenvalues** of $A$. We'll return to eigendecomposition in Mod 4 when we discuss the singular value decomposition, which is a related matrix factorization.\n",
+    "$A = Q\\Lambda Q^{-1}$, where $Q$ is a matrix comprising the **eigenvectors** of $A$ and $\\Lambda$ has non-zero elements only along its main diagonal (hence the \"diagonalization\" of $A$). These non-zero elements are the **eigenvalues** of $A$. We'll return to eigendecomposition later when we discuss recommendation systems and the singular value decomposition, which is a related matrix factorization.\n",
     "\n",
     "Suppose we have the matrix\n",
     "$A =\n",
@@ -444,7 +444,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We'll start by producing the covariance matrix for the columns of X_tr_sc.\n",
+    "# We'll start by producing the covariance matrix for the columns of X_tr_pp.\n",
     "\n",
     "cov_mat = np.cov(X_tr_pp, rowvar=False)\n",
     "cov_mat.shape"
@@ -508,11 +508,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, to transform our data points into the space defined by the principal components, we simply need to compute the dot-product of `X_tr_sc` with those principal components.\n",
+    "Now, to transform our data points into the space defined by the principal components, we simply need to compute the dot-product of `X_tr_pp` with those principal components.\n",
     "\n",
     "Why? Think about what this matrix product looks like:\n",
     "\n",
-    "We take a row of `X_tr_sc` and multiply it by a column of `pcabh`, pairwise. The row of `X_tr_sc` represents the values for the columns in the original space. The column of `pcabh` represents the weights we need on each of the original columns in order to transform a value into principal-component space. And so the product of these two matrices will be each row, transformed into principal-component space!"
+    "We take a row of `X_tr_pp` and multiply it by a column of `pcabh`, pairwise. The row of `X_tr_pp` represents the values for the columns in the original space. The column of `pcabh` represents the weights we need on each of the original columns in order to transform a value into principal-component space. And so the product of these two matrices will be each row, transformed into principal-component space!"
    ]
   },
   {
